--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
+    
+    
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -25,13 +27,13 @@
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20150729</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
@@ -89,10 +91,12 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.0</version>
                 <configuration>
-                    <url>http://localhost:8082/</url>
+                    <url>http://localhost:8082/manager/text</url>
                     <server>tomcat</server>
+                    <username>asd</username>
+                    <password>asd</password>>
                     <update>true</update>
-                    <path>/${project.build.finalName}</path>
+                    <path>/servlet</path>
                 </configuration>
             </plugin>
             
