--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                                     <groupId>javax</groupId>
                                     <artifactId>javaee-endorsed-api</artifactId>
                                     <version>6.0</version>
-                                    <type>jar</type>
+                                    <type>war</type>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
